--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="app-grid">
-            <a href="#" class="app-icon">
+            <a href="https://chatgpt.com/" class="app-icon">
                 <img src="icons/chatgpt.svg" alt="ChatGPT">
                 <span>ChatGPT</span>
             </a>
@@ -17,7 +17,7 @@
                 <img src="icons/icloud.svg" alt="iCloud">
                 <span>iCloud</span>
             </a>
-            <a href="#" class="app-icon disabled">
+            <a href="remote.html" class="app-icon disabled">
                 <img src="icons/remote.svg" alt="Remote Management">
                 <span>Remote<br>Management</span>
             </a>
@@ -25,9 +25,14 @@
                 <img src="icons/settings.svg" alt="Settings">
                 <span>Settings</span>
             </a>
-            <a href="#" class="app-icon">
+            <a href="https://www.icloud.com/calendar/" class="app-icon">
                 <img src="icons/calendar.svg" alt="Calendar">
                 <span>Calendar</span>
+            </a> 
+            <a href="index.html" class="app-icon">
+                <img src="icons/home.svg" alt="Home">
+                <span>Home</span>
+            </a>
             </a>
         </div>
     </div>
