--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="icons/icloud.svg" alt="iCloud">
                 <span>iCloud</span>
             </a>
-            <a href="remote.html" class="app-icon disabled">
+            <a href="remote.html" class="app-icon">
                 <img src="icons/remote.svg" alt="Remote Management">
                 <span>Remote<br>Management</span>
             </a>
